--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "1-start",
   "version": "1.0.0",
   "description": "Testing our app",
-
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -19,9 +18,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
-  "browserslist":[
+  "browserslist": [
     "last 2 versions"
   ]
 }
